--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     </head>
     <body>
         <nav>
+            <div class="logo"></div>
             <ul>
                 <li><a href="/">List</li></a> <!-- these links will drop down to these titles-->
                 <li><a href="/">Downloads</li></a>
                 <li><a href="/">Suggestions</li></a>
             </ul>
             <a href="/"><img src="/">user pic goes here</a> <!-- link to profile-->
-            <a href="/">LogOut</a>
+            <a href="/" type="button">LogOut</a>
         </nav>
         <div id="rows">
             <h2 class="list">star icon // my list:</h2>
