--- a/index.html
+++ b/index.html
@@ -8,27 +8,34 @@
 <html>
     <head>
         <title>hehe netflix</title>
+        <link rel="stylesheet" href="style.css">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+            </style>
     </head>
     <body>
         <nav>
-            <div class="logo"></div>
+            <div class="logo">
+                <img src="/netflix profile/images/logo.png">
+            </div>
             <ul>
                 <li><a href="/">List</li></a> <!-- these links will drop down to these titles-->
                 <li><a href="/">Downloads</li></a>
                 <li><a href="/">Suggestions</li></a>
-            </ul>
-            <a href="/"><img src="/">user pic goes here</a> <!-- link to profile-->
-            <a href="/" type="button">LogOut</a>
+                <li><img src="/netflix profile/images/profilepic.png"></li> <!-- link to profile-->
+                <li><a href="/" type="button">LogOut</a></li>
+             </ul>
         </nav>
         <div id="rows">
-            <h2 class="list">star icon // my list:</h2>
+            <h2 class="list">my list:</h2>
                 <div class="boxes">
                     <!-- these will be movie titles obv lol-->
-                    <img src="/" class="b1">
-                    <img src="/" class="b2">
-                    <img src="/" class="b3">
-                    <img src="/" class="b4">
-                    <img src="/" class="b5">
+                    <div class="tv1"><img src="/netflix profile/images/birdgerton.jpg"></div>
+                    <div class="hide">Bridgerton 2022</div>
+                    <img src="/netflix profile/images/bobsburgers.jpg">
+                    <img src="/netflix profile/images/deadpool.jpg">
+                    <img src="/netflix profile/images/izombie.jpeg">
+                    <img src="/netflix profile/images/nowyouseeme.jpg">
                 </div>
                 <div class="more">
                     <!--arrow with translucent box w more shows????-->
@@ -38,9 +45,9 @@
         <div id="rows">
             <h2 class="downloads">
                 <div class="boxes">
-                    <img src="/" class="b6">
-                    <img src="/" class="b7">
-                    <img src="/" class="b8">
+                    <img src="/">
+                    <img src="/">
+                    <img src="/">
                     <box1>+ Download Another One</box1>
                 </div>
             </h2>
