--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <body>
         <nav>
             <div class="logo">
-                <img src="/netflix profile/images/logo.png">
+                <img src="/images/logo.png">
             </div>
             <ul>
                 <li><a href="/">List</li></a> <!-- these links will drop down to these titles-->
                 <li><a href="/">Downloads</li></a>
                 <li><a href="/">Suggestions</li></a>
-                <li><img src="/netflix profile/images/profilepic.png"></li> <!-- link to profile-->
+                <li><img src="images/profilepic.png"></li> <!-- link to profile-->
                 <li><a href="/" type="button">LogOut</a></li>
              </ul>
         </nav>
@@ -30,12 +30,12 @@
             <h2 class="list">my list:</h2>
                 <div class="boxes">
                     <!-- these will be movie titles obv lol-->
-                    <div class="tv1"><img src="/netflix profile/images/birdgerton.jpg"></div>
+                    <div class="tv1"><img src="images/birdgerton.jpg"></div>
                     <div class="hide">Bridgerton 2022</div>
-                    <img src="/netflix profile/images/bobsburgers.jpg">
-                    <img src="/netflix profile/images/deadpool.jpg">
-                    <img src="/netflix profile/images/izombie.jpeg">
-                    <img src="/netflix profile/images/nowyouseeme.jpg">
+                    <img src="images/bobsburgers.jpg">
+                    <img src="images/deadpool.jpg">
+                    <img src="images/izombie.jpeg">
+                    <img src="images/nowyouseeme.jpg">
                 </div>
                 <div class="more">
                     <!--arrow with translucent box w more shows????-->
